--- a/practice1.html
+++ b/practice1.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>practice1</title>
+    </head>
     <body>
         <h1>Groundbreaking Innovations Unveiled at Tech Expo 2024: A Glimpse into the Future</h1>
         <h2><mark> Solutions Redefining Industries: Unveiling the Next Wave of Technological Advancements at<br>
