--- a/practice2.html
+++ b/practice2.html
@@ -1,8 +1,9 @@
 <html>
-    <head></head>
+    <head>
         <title>practice2</title>
-    <body><h1>Student Admission Form:</h1>
-        <form>
+    </head>
+        <body><h1>Student Admission Form:</h1>
+          <form>
             <label for="name">Name*:</label>
             <input type="text" name="name" id="Name" placeholder="Student_Name"required>
             <br>
