--- a/action/welcome.html
+++ b/action/welcome.html
@@ -1,4 +1,7 @@
 <html>
-    <head><title>Welcome to learning Zone</title></head>
-    <body><h1>Welcome to learning Zone</h1></body>
+    <head>
+        <title>Welcome to learning Zone</title>
+    </head>
+        <body><h1>Welcome to learning Zone</h1></body>
+            
 </html>
