--- a/practice4.html
+++ b/practice4.html
@@ -4,14 +4,14 @@
             practice4
         </title>
         <body>
-            <table
-                <table  border="3" cellpadding="10" cellspacing="0" >
-                   
+          <table  border="3" cellpadding="10" cellspacing="0" >
+                    <thead>
                      <tr>
                         <th colspan="2">
                          First Year Classes 
                         </th>   
                         </tr>
+                    </thead>    
                      <tbody
                         <tr>
                             <td rowspan="3" > CS </td>
