--- a/practice7.html
+++ b/practice7.html
@@ -3,14 +3,15 @@
         <title>practice7</title>
         <style>
             .div_parent{
-                margin:auto ;
+                margin-left: 313px;
                 width: 550px;
                 height: 550px;
                 background: white;
                 border-style: solid;
                 border-color:red ;
                 border-width: 5px;
-                position: relative;
+                position: absolute; 
+                
             }
             .div_child1{
                 margin-top:150px;
@@ -26,24 +27,20 @@
 
             }
             .div_child2{
-                margin-top:0px;
-                margin-left:0px;
-                margin-bottom: 0; 
-                width: 100px;
-                height: 100px;
-                background:hsl(0, 14%, 95%);
                 border-style: solid;
-                border-color:#0e0303 ;
                 border-width: 5px;
-                position: absolute;
+                height: 50px;
+                width: 50px;
+                margin-left: 60px;
+
                 
             }
         </style>
     </head>
     <body>
-        <div class="div_parent">
-        <div class="div_child1">
-        <div class="div_child2">
+        <div class="div_parent">>
+        <div class="div_child1"></div>
+        <div class="div_child2"></div>
         </div>
     </body>
 </html>
