--- a/practice7.html
+++ b/practice7.html
@@ -20,7 +20,6 @@
                 height: 220px;
                 background:black;
                 border-style: solid;
-                border-color:red ;
                 border-width: 5px;
                 position:relative;
 
@@ -29,18 +28,28 @@
             .div_child2{
                 border-style: solid;
                 border-width: 5px;
-                height: 50px;
-                width: 50px;
-                margin-left: 60px;
+                height:90px;
+                width: 90px;
+                margin-left: 452px;
+                margin-top: -380px;
 
-                
+            }
+            .div_child3{
+                position: relative;
+                border-style: solid;
+                border-width: 5px;
+                height:90px;
+                width: 90px;
+                margin-left: 0px;
+                margin-top: 351Px;
             }
         </style>
     </head>
     <body>
-        <div class="div_parent">>
+        <div class="div_parent">
         <div class="div_child1"></div>
         <div class="div_child2"></div>
+        <div class="div_child3"></div>
         </div>
     </body>
 </html>
