--- a/practice7.html/div2.html
+++ b/practice7.html/div2.html
@@ -3,65 +3,50 @@
         <title>practice7</title>
         <style>
             .div_parent{
-                margin-left: 313px;
+                position: relative;
+                border-style: solid;
                 width: 550px;
                 height: 550px;
-                background: white;
-                border-style: solid;
-                border-color:red ;
-                border-width: 5px;
-                position: absolute; 
-                
+                border-width:5px ;
+                background-color: aliceblue;
+                border-color: rgb(226, 10, 10);
+                margin-left: 333px;
             }
             .div_child1{
-                margin-top:150px;
-                margin-left:150px; 
-                width: 220px;
-                height: 220px;
-                background:black;
-                border-style: solid;
-                border-width: 5px;
-                position:absolute;
-
+                border-style:solid;
+                width: 150px;
+                height: 150px;
+                border-color: black;
+                margin-left: 339px;
+                margin-top: 41px;
+                position: relative;
 
             }
             .div_child2{
-                border-style: solid;
-                border-width: 5px;
-                height:90px;
-                width: 90px;
-                margin-left: 452px;
-                margin-top: -380px;
-                position: absolute;
-
+                border-style:solid;
+                width: 150px;
+                height: 150px;
+                border-color: black;
+                margin-left: 339px;
+                margin-top: 24px;
+                background-color: blue;
             }
             .div_child3{
-                position:absolute;
-                border-style: solid;
-                border-width: 5px;
-                height:90px;
-                width: 90px;
-                margin-left: 0px;
-                margin-top: 351Px;
-            }
-            .div_child4{
-                position:absolute;
-                border-style: solid;
-                border-width: 5px;
-                height:90px;
-                width: 90px;
-                margin-left: 0px;
-                margin-top: 31Px;
-                background:blue ;
+                border-style:solid;
+                width: 150px;
+                height: 150px;
+                border-color: black;
+                margin-left: 339px;
+                margin-top: -271px;
+                background-color:black;
             }
         </style>
     </head>
     <body>
         <div class="div_parent">
-        <div class="div_child1"></div>
-        <div class="div_child2"></div>
-        <div class="div_child3"></div>
-        <div class="div_child4"></div>
+            <div class="div_child1"></div>
+            <div class="div_child2"></div>
+            <div class="div_child3"></div>
         </div>
     </body>
 </html>
