--- a/practice7html/div1.html
+++ b/practice7html/div1.html
@@ -3,25 +3,25 @@
         <title>practice7</title>
         <style>
             .div_parent{
-                margin-left: 313px;
+                left: 313px;
                 width: 550px;
                 height: 550px;
                 background: white;
                 border-style: solid;
                 border-color:red ;
                 border-width: 5px;
-                position: absolute; 
+                position:relative; 
                 
             }
             .div_child1{
-                margin-top:150px;
-                margin-left:150px; 
+                top:150px;
+                left:150px; 
                 width: 220px;
                 height: 220px;
                 background:black;
                 border-style: solid;
                 border-width: 5px;
-                position:relative;
+                position:absolute;
 
 
             }
@@ -30,18 +30,19 @@
                 border-width: 5px;
                 height:90px;
                 width: 90px;
-                margin-left: 452px;
-                margin-top: -380px;
+                left: 452px;
+                top: 0px;
+                position: absolute;
 
             }
             .div_child3{
-                position: relative;
                 border-style: solid;
                 border-width: 5px;
                 height:90px;
                 width: 90px;
-                margin-left: 0px;
-                margin-top: 351Px;
+                left: 0px;
+                top: 450Px;
+                position: absolute;
             }
         </style>
     </head>
