--- a/practice7html/div2.html
+++ b/practice7html/div2.html
@@ -19,7 +19,7 @@
                 border-color: black;
                 margin-left: 339px;
                 margin-top: 41px;
-                position: relative;
+                position: absolute;
 
             }
             .div_child2{
@@ -27,18 +27,29 @@
                 width: 150px;
                 height: 150px;
                 border-color: black;
-                margin-left: 339px;
-                margin-top: 24px;
+                left: 339px;
+                top: 226px;
                 background-color: blue;
+                position: absolute;
             }
             .div_child3{
                 border-style:solid;
                 width: 150px;
+                height: 149px;
+                border-color: black;
+                background-color:black;
+                position: absolute;
+                top: 43px;
+                right:223px;
+            }
+            .div_child4{
+                border-style:solid;
+                width: 150px;
                 height: 150px;
                 border-color: black;
-                margin-left: 339px;
-                margin-top: -271px;
-                background-color:black;
+                position: absolute;
+                top: 226px;
+                left: 161px;
             }
         </style>
     </head>
@@ -47,6 +58,7 @@
             <div class="div_child1"></div>
             <div class="div_child2"></div>
             <div class="div_child3"></div>
+            <div class="div_child4"></div>
         </div>
     </body>
 </html>
