--- a/practice8html/div1.html
+++ b/practice8html/div1.html
@@ -43,6 +43,16 @@
                 border-color: #050000;
                 background-color: #04fc04;
             }
+            .div_child4{
+                bottom:0px;
+                left:0px; 
+                width: 250px;
+                height: 250px;
+                background:#06e5f5;
+                border-style: solid;
+                border-width: 5px;
+                position:absolute;
+            }
                 
         </style>
     </head>
