--- a/practice9html/layaut.html
+++ b/practice9html/layaut.html
@@ -7,7 +7,7 @@
     <body>
         <!-- Header from here_v -->
         <header>
-            <div class="header_container"
+            <div class="header_container"></div>
         </header>
         <!-- Header END here_v -->
 
@@ -22,7 +22,7 @@
 
         <!-- footer container start here_v -->
         <footer>
-            <!-- <div class="bottom_footer" -->
+            <div class="bottom_footer"
         </footer>
          <!-- footer container start here_v -->
     </body>
