--- a/practice14html/layaut14.html
+++ b/practice14html/layaut14.html
@@ -12,6 +12,7 @@
     
     <!-- main conatainer start from here_v -->
     <main>
+        <section>
         <div class="main_discription1"></div>
         <div class="course_container">
             <div class="course1"></div>
@@ -25,8 +26,16 @@
             </div>
             <div class="main_discription2"></div>
         </div>
+        </section>
     </main>
     <!-- main END from here_v -->
+
+    <!-- footer started here_v -->
+    <footer>
+        <div class="footer"</div>
+    </footer>
+
+    <!-- footer END here_v -->
     </body>
 
 </html>
