--- a/practice15html/layaut15.html
+++ b/practice15html/layaut15.html
@@ -15,7 +15,7 @@
         <main>
          <!-- main sdiscription1 started here_v -->
          <div class="main_discription1"></div>
-        <!-- main sdiscription1 sENDhere_v -->
+        <!-- main sdiscription1 END here_v -->
 
         <!--main_discription2 started here_v-->
         <div class="main_discription2">
