--- a/practice17html/layaut17.html
+++ b/practice17html/layaut17.html
@@ -6,12 +6,37 @@
     <body>
         <!-- header started here_v -->
         <header>
-            <div class="header_box">
+            <div class="header_box1">
                 <div class="header1"></div>
                 <div class="header2"></div>
                 <div class="header3"></div>
             </div>
         </header>
         <!-- header END here_v -->
+
+        <!-- header_box2 started from here_v -->
+        <div class="header_box2">
+            <div class="header_bar1">
+                <img src="logo.jpg" class="logo_picture" alt="logo here">
+            </div>
+        </div>
+        <!-- header_box2 END here_v -->
+        <div class="header_bar2">
+            <nav class="nav_bar">
+                <a href="#" class="link">Home</a>
+                    <a href="#" class="link">Services</a>
+                    <a href="#" class="link">Gallery</a>
+                    <a href="#" class="link">About Us</a>
+                    <a href="#" class="link">Contact us</a>
+                    <a href="#" class="link">Gallery</a>
+            </nav>
+        </div>
+        <div class="header_bar3">
+            <nav class="nav_log_in_button">
+                <a href="#" class="link" id="">Login</a>
+                <a href="#" class="link" id="singup_button">Sign up</a>
+            </nav>
+        </div>
+        
     </body>
 </html>
